# glimmer

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
api/: Dockerfile  package.json  tsconfig.json
api/src/: auth.test.ts  auth.ts  config.ts  ratelimit.ts  redis.ts  server.ts  storage.ts  ws.ts
api/src/admin/: routes.ts
api/src/agent/: openrouter-text.ts  prompt.ts  routes.ts  schema.ts
api/src/auth/: jwt.ts  routes.ts
api/src/billing/: routes.ts
api/src/credits/: estimate.test.ts  estimate.ts  ledger.test.ts  ledger.ts  routes.ts  settle-subscriber.ts
api/src/db/: migrate.ts  pool.ts
api/src/distractions/: prompt.ts  routes.ts  schema.ts
docs/: INNOVATION_ROADMAP.md
infra/: .env.example  .gitignore  README.md  docker-compose.yml
site/: README.md  docs.html  faq.html  index.html
site/assets/: app.js  styles.css
web/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
workers/: Dockerfile  pyproject.toml  start.sh
workers/aips/: __init__.py  bridge.py  celery_app.py  config.py  contracts.py  redis_io.py  storage.py  worker.py
workers/aips/pipelines/: __init__.py  harmonize.py  imaging.py  inpaint.py  outpaint.py  remove_reflections.py
workers/aips/providers/: __init__.py  fal.py  openrouter.py  replicate.py  resilience.py
workers/aips/tasks/: __init__.py  color_match.py  echo.py  harmonize.py  image_edit.py  inpaint.py  outpaint.py  relight.py  remove_reflections.py  segment.py  text_to_image.py  upscale.py
(+128 files in other folders)
