[project]
name = "aips-workers"
version = "0.1.0"
description = "ai-ps Python + Celery workers — heavy image/AI jobs (OpenRouter, MinIO)."
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4,<6",
    "redis>=5.0,<6",
    "httpx>=0.27,<1",
    "pillow>=10.3,<12",
    "numpy>=1.26,<3",
    "python-dotenv>=1.0,<2",
    "boto3>=1.34,<2",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10"]

[project.scripts]
# Celery worker process (consumes the fast/gen/heavy queues).
aips-worker = "aips.worker:main"
# Bridge loop: BRPOP from the API's Redis intake list -> dispatch Celery tasks.
aips-bridge = "aips.bridge:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aips*"]

[tool.ruff]
line-length = 100
target-version = "py312"
